fix: competencies tab

--- a/src/app/recipient/components/recipient-earned-badge-list/recipient-earned-badge-list.component.html
+++ b/src/app/recipient/components/recipient-earned-badge-list/recipient-earned-badge-list.component.html
@@ -180,7 +180,7 @@
 				</ng-template>
 
 				<ng-template #badgesCompetency>
-					<div class="oeb-headline-container-sm" *ngIf="activeTab === 'Kompetenzen'">
+					<div class="oeb-headline-container-sm" *ngIf="activeTab === 'competencies'">
 						<div class="oeb-section-sm">
 							<div class="tw-grid tw-grid-cols-1 md:tw-grid-cols-3 tw-gap-3">
 								<div
