--- a/src/app/recipient/components/recipient-badge-collection-detail/recipient-badge-collection-detail.component.html
+++ b/src/app/recipient/components/recipient-badge-collection-detail/recipient-badge-collection-detail.component.html
@@ -16,8 +16,8 @@
 								icon="lucideUpload"
 								iconLeft="true"
 								variant="secondary"
-								[disabled]
-								disabled="true"
+								(click)="openShareDialog(collection)"
+								[disabled]="!collection.published"
 							>
 							</oeb-button>
 
@@ -41,13 +41,13 @@
 						<h1 hlmH1 class="tw-text-purple tw-font-black">
 							{{ collection?.name }}
 						</h1>
-						<!-- <div class="tw-mt-4 tw-flex tw-gap-2 tw-items-center">
+						<div class="tw-mt-4 tw-flex tw-gap-2 tw-items-center">
 							<label hlmLabel>
 								<hlm-switch [(ngModel)]="collection.published" (ngModelChange)="togglePublished()">
 								</hlm-switch>
 							</label>
 							{{ 'General.public' | translate }}
-						</div> -->
+						</div>
 					</div>
 					<p class="tw-text-oebblack tw-text-lg">
 						{{ collection?.description }}
@@ -68,7 +68,7 @@
 			<!-- List of Badges in Collection -->
 			<ng-container *ngIf="collection?.badgeEntries.length">
 				<div class="oeb-headline-container-sm">
-					<h2 class="tw-text-oebblack tw-text-[22px] tw-font-semiold tw-leading-[120%]">
+					<h2 class="tw-text-oebblack tw-text-[22px] tw-font-semibold tw-leading-[120%]">
 						{{ badgesInCollectionCount }}
 					</h2>
 				</div>
