--- a/src/app/recipient/components/recipient-earned-badge-list/recipient-earned-badge-list.component.html
+++ b/src/app/recipient/components/recipient-earned-badge-list/recipient-earned-badge-list.component.html
@@ -10,6 +10,7 @@
 					</h2>
 
 					<oeb-button
+						*ngIf="activeTab === 'badges'"
 						icon="lucideUpload"
 						iconLeft="true"
 						(click)="uploadBadge()"
@@ -399,7 +400,7 @@
 									<p class="tw-mt-4 tw-text-oebblack tw-text-lg">
 										{{ 'BadgeCollection.collectionInfoText' | translate }}
 									</p>
-									<p class="tw-mt-2 tw-text-purple tw-text-lg">
+									<p class="tw-mt-2 tw-text-purple tw-text-lg tw-italic">
 										{{ 'BadgeCollection.addLink' | translate }}
 									</p>
 
