Fix/test findings may26 (#1309)
* fix: delete collection dialog

* fix: collection adjustments

* fix: criteria

* fix: rm old code

--- a/src/app/issuer/components/badgeclass-edit-form/badgeclass-edit-form.component.html
+++ b/src/app/issuer/components/badgeclass-edit-form/badgeclass-edit-form.component.html
@@ -1005,7 +1005,7 @@
 							[innerHTML]="'Badge.criteriaDesc' | translate"
 						></span>
 						<div class="tw-mt-2 tw-mb-2 tw-grid tw-grid-cols-3">
-							<div class="tw-grid tw-grid-cols-2 tw-col-span-2">
+							<div class="tw-grid tw-grid-cols-2 tw-col-span-2 tw-gap-4">
 								<ng-container
 									*ngFor="
 										let criteriaGroup of criteriaSelectionsForm.controls.selections.controls;
@@ -1022,7 +1022,7 @@
 								class="tw-col-span-1"
 								size="sm"
 								type="button"
-								variant="secondary"
+								variant="white"
 								[text]="'Badge.addOwnCriteria' | translate"
 								(click)="addNewOwnCriteria()"
 							></oeb-button>
@@ -1077,7 +1077,7 @@
 							[innerHTML]="'CreateBadge.expirationInfo' | translate"
 						></span>
 						<div class="formsection-x-body">
-							<div class="l-spacestack">
+							<div class="tw-w-fit tw-flex tw-gap-6">
 								<oeb-input
 									id="duration-number"
 									[control]="expirationForm.rawControlMap.expires_amount"
