fix(oeb-dropdown): add noTranslate input

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -167,6 +167,7 @@
 									[menuItems]="item.children | CmsMenuItems"
 									[trigger]="item.title"
 									triggerStyle="oeb-navitem tw-cursor-pointer !tw-leading-none !tw-py-1"
+									[noTranslate]="true"
 								/>
 							} @else {
 								<a
@@ -231,6 +232,7 @@
 									[menuItems]="item.children | CmsMenuItems"
 									[trigger]="item.title"
 									triggerStyle="oeb-navitem tw-cursor-pointer !tw-leading-none !tw-py-1"
+									[noTranslate]="true"
 								/>
 							} @else {
 								<a
