--- a/src/app/public/components/badge-collection/badge-collection.component.html
+++ b/src/app/public/components/badge-collection/badge-collection.component.html
@@ -23,39 +23,52 @@
 		<div class="page-padding oeb">
 			<div class="tw-bg-lightpurple oeb-inset-padding">
 				<header class="oeb-section-sm">
+					<h1 hlmH1 class="tw-text-purple tw-py-1">
+						{{ 'General.collection' | translate }} {{ 'General.of' | translate }}
+						{{ collection.owner.firstName }} {{ collection.owner.lastName }}
+					</h1>
 					<div class="oeb-headline-container-sm">
-						<h2 class="tw-text-purple tw-text-[22px] tw-leading-[120%]">
-							{{ 'General.collection' | translate }} {{ 'General.of' | translate }}
-							{{ collection.owner.firstName }} {{ collection.owner.lastName }}
-						</h2>
-					</div>
-					<div class="oeb-headline-container-sm">
-						<h2 class="tw-text-purple tw-text-[22px] tw-font-semibold tw-leading-[120%]">
+						<h1 hlmH1 class="tw-text-purple tw-font-black">
 							{{ collection.name }}
-						</h2>
+						</h1>
 					</div>
 					<div class="oeb-headline-container-sm">
-						<p class="tw-text-lg tw-text-oebblack">
+						<p class="tw-text-oebblack tw-text-lg">
 							{{ collection.description }}
 						</p>
 					</div>
 				</header>
 
-				<div class="tw-gap-6 tw-grid tw-grid-cols-badges">
-					<bg-badgecard
-						*ngFor="let badge of collection.badges"
-						[badgeTitle]="badge.badge.name"
-						[badgeImage]="badge.image"
-						[badgeDescription]="badge.badge.description"
-						[badgeIssueDate]="badge?.issuedOn"
-						[mostRelevantStatus]="badge.badge.mostRelevantStatus"
-						[issuerTitle]="badge.badge.issuer.name"
-						[public]="true"
-						[publicUrl]="getBadgeUrl(badge)"
-						[competencies]="badge.badge['extensions:CompetencyExtension']"
+				<section class="l-containerxaxis l-containeryaxis">
+					<span
+						class="tw-text-oebblack tw-font-bold tw-text-[22px] tw-leading-[120%]"
+						*ngIf="collection?.badges.length === 0"
 					>
-					</bg-badgecard>
-				</div>
+						0 {{ 'BadgeCollection.badgesInCollection' | translate }}
+					</span>
+					<ng-container *ngIf="collection?.badges.length">
+						<div class="oeb-headline-container-sm">
+							<h2 class="tw-text-oebblack tw-text-[22px] tw-font-semibold tw-leading-[120%]">
+								{{ `${collection?.badges.length} Badge${collection?.badges.length === 1 ? '' : 's'}` }}
+							</h2>
+						</div>
+						<div class="tw-gap-6 tw-grid tw-grid-cols-badges">
+							<bg-badgecard
+								*ngFor="let badge of collection.badges"
+								[badgeTitle]="badge.badge.name"
+								[badgeImage]="badge.image"
+								[badgeDescription]="badge.badge.description"
+								[badgeIssueDate]="badge?.issuedOn"
+								[mostRelevantStatus]="badge.badge.mostRelevantStatus"
+								[issuerTitle]="badge.badge.issuer.name"
+								[public]="true"
+								[publicUrl]="getBadgeUrl(badge)"
+								[competencies]="badge.badge['extensions:CompetencyExtension']"
+							>
+							</bg-badgecard>
+						</div>
+					</ng-container>
+				</section>
 			</div>
 		</div>
 	</main>
