feat/share collections (#1316)
* feat: wip share dialog

* feat: wip new share dialog

* feat: turn switches back on, adjust public collection component

* feat: refactor

* fix: clean up

* fix: clean up

* fix(layout): adjust public collection page to fit mockup

* refactor: use clipboard api for copy, add feedback after copy

---------

Co-authored-by: David Scheidt <david.scheidt@opensenselab.org>

--- a/src/app/recipient/components/recipient-earned-badge-list/recipient-earned-badge-list.component.html
+++ b/src/app/recipient/components/recipient-earned-badge-list/recipient-earned-badge-list.component.html
@@ -437,6 +437,7 @@
 								<bg-collectioncard
 									*ngFor="let collection of collections"
 									[collection]="collection"
+									(share)="openShareDialog(collection)"
 								></bg-collectioncard>
 							</div>
 							<oeb-button
@@ -532,6 +533,14 @@
 						class="tw-text-lg tw-text-purple tw-italic tw-mt-1"
 						[innerHTML]="'BadgeCollection.addLink' | translate"
 					></p>
+				</ng-template>
+				<ng-template #shareDialogHeaderTemplate>
+					<h2 class="tw-text-purple tw-font-bold tw-text-[22px] tw-leading-[120%]">
+						{{ 'BadgeCollection.shareCollection' | translate }}
+					</h2>
+				</ng-template>
+				<ng-template #shareDialogContentTemplate let-shareUrl="share_url">
+					<share-dialog-template></share-dialog-template>
 				</ng-template>
 			</div>
 		</div>
