fix: disable checkbox while sending batch award request

--- a/src/app/issuer/components/badgeclass-issue-bulk-award-confirmation/badgeclass-issue-bulk-award-confirmation.component.html
+++ b/src/app/issuer/components/badgeclass-issue-bulk-award-confirmation/badgeclass-issue-bulk-award-confirmation.component.html
@@ -51,6 +51,7 @@
 			type="checkbox"
 			[control]="issueForm.rawControlMap.notify_earner"
 			[text]="'Issuer.sendEmail' | translate"
+			[disabled]="buttonDisabledAttribute"
 		></oeb-checkbox>
 	</div>
 
