feat(cms): set components standalone, signal inputs

--- a/src/app/common/components/cms/cms-post-list/cms-post-list.component.html
+++ b/src/app/common/components/cms/cms-post-list/cms-post-list.component.html
@@ -34,9 +34,8 @@
 				</h2>
 				<div class="tw-text-[24px]/[1.3em]">
 					<span [innerHTML]="posts[0].post_excerpt || posts[0].post_content"></span>
-					<a class="tw-text-link tw-underline" href="{{posts[0].slug}}">
-						{{ "General.readmore" | translate }}
-					</a>
+					&ngsp;
+					<a class="tw-text-link tw-underline" href="{{posts[0].slug}}">{{ "General.readmore" | translate }}</a>
 				</div>
 			</div>
 		</div>
