fix: qrcode awarding

--- a/src/app/issuer/components/qrcode-awards/qrcode-awards.component.html
+++ b/src/app/issuer/components/qrcode-awards/qrcode-awards.component.html
@@ -72,7 +72,7 @@
 								[issuerSlug]="issuer.slug"
 								[badgeSlug]="badgeClass.slug"
 								(deletedQRAward)="deleteQRAward($event)"
-								(qrBadgeAward)="onQrBadgeAward()"
+								(qrBadgeAward)="onQrBadgeAward($event)"
 								[(requestCount)]="award.request_count"
 							></qrcodes-datatable>
 						</brn-accordion-content>
