fix(ob30): add-badge-dialog cancel button handling

--- a/src/app/recipient/components/add-badge-dialog/add-badge-dialog.component.html
+++ b/src/app/recipient/components/add-badge-dialog/add-badge-dialog.component.html
@@ -85,7 +85,9 @@
 			<oeb-button
 				[text]="'General.cancel' | translate"
 				variant="secondary"
+				type="button"
 				size="sm"
+				(click)="this.closeDialog();"
 			/>
 			<oeb-button
 				type="submit"
