--- a/src/app/public/components/badge-collection/badge-collection.component.html
+++ b/src/app/public/components/badge-collection/badge-collection.component.html
@@ -19,7 +19,7 @@
 	</div>
 
 	<!-- Regular View -->
-	<main *ngIf="!embedService.isEmbedded">
+	<main *ngIf="!embedService.isEmbedded && collection">
 		<div class="page-padding oeb">
 			<div class="tw-bg-lightpurple oeb-inset-padding">
 				<header class="oeb-section-sm">
@@ -71,5 +71,9 @@
 				</section>
 			</div>
 		</div>
+	</main>
+
+	<main *ngIf="!embedService.isEmbedded && !collection">
+		<bg-not-found-collection />
 	</main>
 </ng-template>
