--- a/src/app/recipient/components/add-badge-dialog/add-badge-dialog.component.scss
+++ b/src/app/recipient/components/add-badge-dialog/add-badge-dialog.component.scss
@@ -9,17 +9,17 @@
 		background-color: var(--color-lightgray);
 		border-width: 4px 0 0;
 		font-weight: bold;
-		&.data-\[state\=active\]\:tw-shadow-sm[data-state="inactive"] {
+		&.data-\[state\=active\]\:tw-shadow-sm[data-state='inactive'] {
 			border-top-color: var(--color-lightgray);
 		}
-		&.data-\[state\=active\]\:tw-shadow-sm[data-state="active"] {
+		&.data-\[state\=active\]\:tw-shadow-sm[data-state='active'] {
 			border-width: 4px 0 0;
 			box-shadow: none;
 			font-weight: bold;
 			color: black;
 		}
 	}
-	[role=tabpanel] {
+	[role='tabpanel'] {
 		background-color: var(--color-lightgray);
 	}
 }
